data/derived/sp14/progs/unify/prog4499.ml.out
Characters 135-136:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a -> 'b -> 'a list * 'a
       but an expression was expected of type 'a -> 'b -> 'a
       The type variable 'a occurs inside 'a list * 'a
